# sdl_core

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  setup_env.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
src/3rd_party-static/: CMakeLists.txt
src/3rd_party-static/protobuf-2.6.1/: configure
src/3rd_party-static/protobuf-2.6.1-cmake/: CMakeLists.txt  build_protoc.sh
src/3rd_party-static/protobuf-2.6.1/autom4te.cache/: output.1  requests  traces.1  traces.2
src/appMain/: CMakeLists.txt  smartDeviceLink.ini
src/components/: CMakeLists.txt
src/components/application_manager/src/: application_manager_impl.cc
src/components/can_cooperation/: CMakeLists.txt  InteriorVehicleDataCapabilities.json  reverse_sdl_pt.json
src/components/can_cooperation/include/can_cooperation/: can_module_constants.h  message_helper.h  request_controller.h
src/components/can_cooperation/src/: can_module.cc  message_helper.cc  request_controller.cc
src/components/can_cooperation/test/: CMakeLists.txt
src/components/config_profile/src/: profile.cc
src/components/functional_module/: CMakeLists.txt
src/components/functional_module/src/: generic_module.cc  plugin_manager.cc
src/components/include/protocol/: service_type.h
src/components/ivdcm_module/: CMakeLists.txt  readme.md
src/components/ivdcm_module/interface/: rpc.proto
src/components/ivdcm_module/net/: CMakeLists.txt  connected_socket.h  connected_socket_impl.h  linux_tun_adapter.h  qnx_tun_adapter.h  server_socket.h  server_socket_impl.h  socket.h  tun_adapter.h  tun_adapter_interface.h
src/components/ivdcm_module/net/src/: connected_socket_impl.cc  linux_tun_adapter.cc  qnx_tun_adapter.cc  server_socket.cc  server_socket_impl.cc  socket.cc
src/components/ivdcm_module/src/: gpb_data_sender_receiver.cc  ip_data_sender.cc  ip_data_sender_receiver.cc  ivdcm.cc  ivdcm_event.cc  ivdcm_proxy.cc  pcap_wrapper.cc  request_controller.cc  rpc.cc
src/components/ivdcm_module/transmitter/: CMakeLists.txt  transmitter.h
src/components/ivdcm_module/transmitter/src/: transmitter.cc
src/components/ivdcm_module/utils/: scope_guard.h  types.h
src/components/policy/test/: CMakeLists.txt  access_remote_impl_test.cc
src/components/protocol/src/: service_type.cc
src/components/vr_cooperation/: CMakeLists.txt
src/components/vr_cooperation/include/vr_cooperation/: channel.h  command_factory.h  gpb_data_sender_receiver.h  hmi_command_factory.h  message_helper.h  mobile_command_factory.h  request_controller.h  service_module.h  socket_channel.h  vr_module.h  vr_module_constants.h  vr_module_event.h  vr_module_event_gpb.h  vr_module_timer.h  vr_proxy.h  vr_proxy_listener.h
src/components/vr_cooperation/include/vr_cooperation/commands/: activate_service_request.h  active_service_request.h  base_command_notification.h  base_command_request.h  base_gpb_request.h  base_json_request.h  command.h  gpb_notification.h  json_notification.h  on_default_service_chosen.h  on_default_service_chosen_notification.h  on_register_service_notification.h  on_service_deactivated_notification.h  on_unregister_service_notification.h  process_data_request.h  register_service_request.h  request_from_hmi.h  support_service_request.h  unregister_service_request.h
src/components/vr_cooperation/include/vr_cooperation/commands/hmi/: active_service_request.h  process_data_request.h  request_from_hmi.h
src/components/vr_cooperation/include/vr_cooperation/event_engine/: event.h  event_dispatcher.h  event_observer.h
src/components/vr_cooperation/interface/: hmi.proto
src/components/vr_cooperation/net/: connected_socket.h  connected_socket_impl.h  socket.h
src/components/vr_cooperation/net/src/: connected_socket.cc  connected_socket_impl.cc  socket.cc
src/components/vr_cooperation/src/: activate_service_request.cc  active_service_request.cc  base_command_notification.cc  base_command_request.cc  command_factory.cc  gpb_data_sender_receiver.cc  hmi_command_factory.cc  message_helper.cc  mobile_command_factory.cc  on_default_service_chosen.cc  on_default_service_chosen_notification.cc  on_service_deactivated_notification.cc  process_data_request.cc  register_service_request.cc  request_controller.cc  request_from_hmi.cc  socket_channel.cc  support_service_request.cc  unregister_service_request.cc  vr_module.cc  vr_module_event.cc  vr_module_event_gpb.cc  vr_proxy.cc
src/components/vr_cooperation/src/command/: activate_service_request.cc  base_command_request.cc  base_gpb_request.cc  base_json_request.cc  gpb_notification.cc  json_notification.cc  on_default_service_chosen_notification.cc  on_register_service_notification.cc  on_service_deactivated_notification.cc  on_unregister_service_notification.cc  process_data_request.cc  register_service_request.cc  request_from_hmi.cc  support_service_request.cc  unregister_service_request.cc
src/components/vr_cooperation/src/commands/hmi/: active_service_request.cc  process_data_request.cc  request_from_hmi.cc
src/components/vr_cooperation/test/: CMakeLists.txt
src/components/vr_cooperation/test/include/: mock_service_module.h  mock_vr_proxy_listener.h
src/components/vr_cooperation/test/src/: active_service_test.cc  on_default_service_chosen_test.cc  on_register_service_test.cc  on_service_deactivated_test.cc  on_unregister_service_test.cc  support_service_test.cc  vr_library_test.cc
src/components/vr_cooperation/utils/: scope_guard.h  types.h
src/components/vr_module/: CMakeLists.txt
src/components/vr_module/src/: vr_module.cc
(+182 files in other folders)
